add ListProjectSurfacesUseCase
