# backend/internal/transport/http/handler/project_surface.go
@@ -16,15 +16,18 @@ import (
 type ProjectSurfaceHandler struct {
 	createProjectSurfaceUseCase  *projectsurfaceusecase.CreateProjectSurfaceUseCase
 	getProjectSurfaceByIDUseCase *projectsurfaceusecase.GetProjectSurfaceByIDUseCase
+	listProjectSurfacesUseCase   *projectsurfaceusecase.ListProjectSurfacesUseCase
 }
 
 func NewProjectSurfaceHandler(
 	createProjectSurfaceUseCase *projectsurfaceusecase.CreateProjectSurfaceUseCase,
 	getProjectSurfaceByIDUseCase *projectsurfaceusecase.GetProjectSurfaceByIDUseCase,
+	listProjectSurfacesUseCase *projectsurfaceusecase.ListProjectSurfacesUseCase,
 ) *ProjectSurfaceHandler {
 	return &ProjectSurfaceHandler{
 		createProjectSurfaceUseCase:  createProjectSurfaceUseCase,
 		getProjectSurfaceByIDUseCase: getProjectSurfaceByIDUseCase,
+		listProjectSurfacesUseCase:   listProjectSurfacesUseCase,
 	}
 }
 
@@ -165,4 +168,102 @@ func (h *ProjectSurfaceHandler) GetByID(c fiber.Ctx) error {
 	getProjectSurfaceByIDResp := mapper.ToGetProjectSurfaceByIDResponse(outputGetProjectSurfaceByIDUseCase)
 
 	return c.Status(fiber.StatusOK).JSON(getProjectSurfaceByIDResp)
+}
+
+// godoc: ListProjectSurfaces godoc
+// @Summary List Project Surfaces
+// @Description List Project Surfaces
+// @Produce json
+// @Param page query int false "Page" default(1)
+// @Param page_size query int false "Page Size" default(20)
+// @Param project_id path int true "Project ID"
+// @Success 200 {object} dto.ListProjectSurfacesResponse
+// @Failure 400 {object} httperror.ErrorResponse
+// @Failure 401 {object} httperror.ErrorResponse
+// @Failure 404 {object} httperror.ErrorResponse
+// @Failure 500 {object} httperror.ErrorResponse
+// @Resource ProjectSurfaces
+// @Security BearerAuth
+// @Router /api/v1/projects/{project_id}/surfaces [get]
+func (h *ProjectSurfaceHandler) ListProjectSurfaces(c fiber.Ctx) error {
+	projectID, err := strconv.ParseInt(c.Params("project_id"), 10, 64)
+	if err != nil {
+		return httperror.Handle(
+			c,
+			apperror.Validation(
+				"invalid id",
+				apperror.NewFieldError(
+					"project_id",
+					apperror.FieldCodeInvalid,
+					"project_id must be a valid positive integer",
+				),
+			),
+		)
+	}
+
+	pageSizeQuery, pageQuery := c.Query("page_size"), c.Query("page")
+
+	if pageSizeQuery == "" {
+		pageSizeQuery = "20"
+	}
+
+	if pageQuery == "" {
+		pageQuery = "1"
+	}
+
+	pageSize, err := strconv.Atoi(pageSizeQuery)
+	if err != nil {
+		return httperror.Handle(
+			c,
+			apperror.Validation(
+				"invalid page size",
+				apperror.NewFieldError(
+					"page_size",
+					apperror.FieldCodeInvalid,
+					"page size must be a valid positive integer",
+				),
+			),
+		)
+	}
+
+	page, err := strconv.Atoi(pageQuery)
+	if err != nil {
+		return httperror.Handle(
+			c,
+			apperror.Validation(
+				"invalid page",
+				apperror.NewFieldError(
+					"page",
+					apperror.FieldCodeInvalid,
+					"page must be a valid positive integer",
+				),
+			),
+		)
+	}
+
+	userID := c.Locals(middleware.UserIDLocalKey)
+	u, ok := userID.(int64)
+	if !ok {
+		return httperror.Handle(
+			c,
+			apperror.Internal("failed to get user id from request context", errors.New("user_id local is missing or invalid")),
+		)
+	}
+
+	inputListProjectSurfacesUseCase := mapper.ToListProjectSurfacesInput(u, projectID, page, pageSize)
+
+	outputListProjectSurfacesUseCase, err := h.listProjectSurfacesUseCase.Execute(
+		c.Context(),
+		inputListProjectSurfacesUseCase,
+	)
+	if err != nil {
+		return httperror.Handle(
+			c,
+			err,
+		)
+	}
+
+	listProjectSurfacesResp := mapper.ToListProjectSurfacesResponse(outputListProjectSurfacesUseCase)
+
+	return c.Status(fiber.StatusOK).JSON(listProjectSurfacesResp)
 }
