# backend/internal/usecase/project_surface/validation.go
@@ -58,3 +58,32 @@ func (input *GetProjectSurfaceByIDInput) Validate() []apperror.FieldError {
 
 	return errors
 }
+
+func (input *ListProjectSurfacesInput) Validate() []apperror.FieldError {
+	errors := []apperror.FieldError{}
+
+	errors = append(errors, validateID(input.UserID, "user_id")...)
+	errors = append(errors, validateID(input.ProjectID, "project_id")...)
+
+	if input.Page < 1 {
+		errors = append(errors,
+			apperror.NewFieldError(
+				"page",
+				apperror.FieldCodeInvalid,
+				"page must be greater than 0",
+			),
+		)
+	}
+
+	if input.PageSize < 1 || input.PageSize > 100 {
+		errors = append(errors,
+			apperror.NewFieldError(
+				"page_size",
+				apperror.FieldCodeInvalid,
+				"page_size must be between 1 and 100",
+			),
+		)
+	}
+
+	return errors
+}
